--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "devDependencies": {
-    "babel": "^5.8.23",
-    "browserify": "^11.2.0",
     "gulp": "^3.8.8",
     "gulp-shell": "^0.3.0",
-    "insert-css": "^0.2.0",
-    "laravel-elixir": "*"
+    "laravel-elixir": "^4.0.0",
+    "laravel-elixir-vueify": "^1.0.2"
   }
 }
