--- a/package.json
+++ b/package.json
@@ -1,8 +1,32 @@
 {
+  "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "browser-sync": "^2.11.1",
+    "browser-sync-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.23.1",
+    "expose-loader": "^0.7.1",
     "gulp": "^3.8.8",
-    "gulp-shell": "^0.3.0",
-    "laravel-elixir": "^4.0.0",
-    "laravel-elixir-vueify": "^1.0.2"
-  }
+    "image-webpack-loader": "^1.6.3",
+    "imports-loader": "^0.6.5",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "precss": "^1.4.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.1.0",
+    "vue-loader": "^8.1.1",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.12.13"
+  },
+  "dependencies": {}
 }
