--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
+    "postcss-import": "^8.0.2",
+    "postcss-less-vars": "^1.1.0",
     "postcss-loader": "^0.8.0",
     "precss": "^1.4.0",
     "sass-loader": "^3.1.2",
