--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-html-loader": "^1.1.0",
     "vue-loader": "^8.1.1",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "webpack-notifier": "^1.2.1"
   },
   "dependencies": {}
 }
